# p2g-eval

./: .coveragerc  .flake8  .gitignore  .gitmodules  Dockerfile  README.md  compose.yaml  pylint_config.toml  requirements.txt  setup.cfg  setup.py
p2g_eval/: default_config.yaml  main.py
p2g_eval/config/: config.py  feed_property.py
p2g_eval/datastructures/: p2g_types.py
p2g_eval/datastructures/gtfs/: base_gtfs_object.py  calendar.py  calendar_dates.py  feed.py  routes.py  stop.py  stop_times.py  trips.py
p2g_eval/datastructures/measures/: stop_measures.py
p2g_eval/entity_mapper/: base_entity_mapper.py
p2g_eval/in_out/: arg_parser.py  feed_reader.py
src/: main.py
src/datastructures/: date.py  location.py  p2g_time.py  p2g_types.py
src/datastructures/gtfs/: base_gtfs_file.py  base_gtfs_object.py  calendar.py  calendar_dates.py  feed.py  routes.py  (+3 more)
src/in_out/: feed_reader.py
src/p2g_eval/: evaluate.py  feed.py  feed_mapper.py  main.py  measures.py  utils.py
test/: __init__.py
test/test_config/: test_config.py
test/test_datastructures/: test_feed.py  test_location.py  test_p2g_types.py
test/test_entity_mapper/: test_base_entity_mapper.py
test/test_in_out/: test_arg_parser.py  test_feed_reader.py
test/testdata/: stop_mapping-vag-p2g_vag_1.csv
tests/: utils.py
tests/test_config/: test_config.py
tests/test_datastructures/: test_feed.py
tests/test_entity_mapper/: test_base_entity_mapper.py
tests/test_in_out/: test_arg_parser.py  test_feed_reader.py
tests/testdata/: stop_mapping-p2g_vag_1-p2g_vag_1.csv  stops_vag.txt  stops_vag_p2g.txt
(+20 files in other folders)
