[metadata]
name = p2g_eval
version = 0.1
author = Julius Heinzinger
url = https://github.com/heijul/p2g-eval
license = Apache 2.0
description = Evaluation tool for pdf2gtfs
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
package_dir = =src
install_requires =
    geopy >= 2.3.0
    pandas >= 1.5.3
    setuptools-git
    custom_conf
    # pdf2gtfs
include_package_data = True
python_requires = >=3.10

[options.packages.find]
where = src

[options.package_data]
p2g_eval = default_config.yaml
